# synchronous-gossip-protocol

./: .gitignore  README.md  pyproject.toml  synchronous_gossip.ipynb  test_gossip.py  theory.ipynb
.github/workflows/: unittest.yml
synchronous_gossip_protocol/: __init__.py  node.py  state_transition.py
tests/: test_generate_nodes_and_run_stf.py  test_node_generation.py  test_state_transition.py
