[tool.poetry]
name = "synchronous-gossip-protocol"
version = "0.1.0"
description = ""
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "synchronous_gossip_protocol" }]

[tool.poetry.dependencies]
python = "^3.11"
docopt = "^0.6.2"


[tool.poetry.group.test.dependencies]
coverage = "^7.3.0"



[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
notebook = "^7.0.2"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
